implemented all unit tests and setup jacoco